--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --prod",
+    "s": "ng serve --port 5100",
+    "b": "ng build --prod --build-optimizer",
+    "d": "firebase deploy",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -26,8 +27,9 @@
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "ngx-infinite-scroll": "^0.5.1",
+    "ngx-infinite-scroll": "^0.8.3",
     "rxjs": "^5.5.6",
+    "smooth-scrollbar": "^8.2.7",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
