--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular2-navigate-with-data": "^1.1.11",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "ngx-infinite-scroll": "^0.8.3",
+    "ngx-pipes": "^2.1.2",
     "rxjs": "^5.5.6",
     "smooth-scrollbar": "^8.2.7",
     "zone.js": "^0.8.19"
