--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "ngx-infinite-scroll": "^0.8.3",
+    "moment": "^2.21.0",
     "ngx-pipes": "^2.1.2",
     "rxjs": "^5.5.6",
     "smooth-scrollbar": "^8.2.7",
