--- a/package.json
+++ b/package.json
@@ -29,11 +29,9 @@
     "firebase": "^5.2.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.10",
-    "moment": "^2.22.2",
-    "ngx-pipes": "^2.2.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.1",
-    "scrollreveal": "^3.4.0",
+    "smooth-scrollbar": "^8.3.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
