--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# user
+*.spec.ts
+
+# environments
+src/environments/**
+
 # compiled output
 /dist
 /tmp
