--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "@angular/service-worker": "~9.1.0",
     "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.15",
     "rxjs": "~6.5.4",
-    "simplebar": "^5.1.0",
     "tslib": "^1.10.0",
+    "vanilla-tilt": "^1.7.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -34,9 +35,10 @@
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
