--- a/angular.json
+++ b/angular.json
@@ -29,10 +29,17 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
+              "./node_modules/bootstrap/scss/bootstrap.scss",
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+              "./node_modules/ng-snotify/styles/simple.scss",
+              "./node_modules/animate.css/animate.min.css",
+              "./node_modules/simplebar/dist/simplebar.min.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/vanilla-tilt/dist/vanilla-tilt.min.js",
+              "./node_modules/simplebar/dist/simplebar.min.js",
+            ]
           },
           "configurations": {
             "production": {
