--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "@angular/service-worker": "~9.1.0",
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
+    "easy-scroll": "^0.6.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
+    "ng-snotify": "^9.0.1",
     "rxjs": "~6.5.4",
+    "simplebar": "^5.1.0",
     "tslib": "^1.10.0",
     "vanilla-tilt": "^1.7.0",
     "zone.js": "~0.10.2"
@@ -39,6 +43,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.11.1",
+    "@types/vanilla-tilt": "^1.6.2",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
