--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
             "styles": [
               "./node_modules/bootstrap/scss/bootstrap.scss",
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+              "./node_modules/@angular/cdk/overlay-prebuilt.css",
               "./node_modules/ng-snotify/styles/simple.scss",
               "./node_modules/animate.css/animate.min.css",
               "./node_modules/simplebar/dist/simplebar.min.css",
