--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~9.1.0",
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.1.0",
     "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.1.0",
@@ -25,11 +26,13 @@
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "easy-scroll": "^0.6.0",
+    "firebase": "^7.14.1",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
     "ng-lazyload-image": "^7.1.0",
     "ng-snotify": "^9.0.1",
     "rxjs": "~6.5.4",
+    "rxjs-compat": "^6.5.5",
     "simplebar": "^5.1.0",
     "tslib": "^1.10.0",
     "vanilla-tilt": "^1.7.0",
